--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
+    <title>Q轩导航</title>
   </head>
   <body>
-    <img src="WallpaperStudio10-114285.jpg">
 <h1>hello<h1>
   <p>啥都没有，别看了</p>
   </body>
