--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <li> 林大 2-3 HTML标签：h1-h6、p、br、pre、span、hr </li>-->
       <li>林大 1-1web前端开发概述</li>
     </ol>
-    <h2> 内容 </h2>
-    <h4> 林大 2-2 文件结构、字符与编码 </h4>
+    <!--<h2> 内容 </h2>
+    <h4> 林大 2-2 文件结构、字符与编码 </h4>-->
     <table style="width:100%">
       <tr>
         <th>名称</th>
@@ -49,6 +49,10 @@
       <tr>
         <td>我的作品</td>
         <td> <a href="2-2-charset-utf-8.html"> UTF-8编码示例 </a> </td>
+      <tr>
+        <td>课程材料</td>
+        <td> <a href="2-2文件结构.pdf"> PDF（503KB） </a> 
+        </td>
       </tr>
       <tr>
         <td>学习时间</td>
