--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <td>学习内容</td>
         <td> 这部分我学到了用meta charset="UTF-8"设置网页字符集。源文件与声明的编码方式都是UTF-8时，才能正常显示。否则就会出现乱码哦</td>
       </tr>
-      <!--<tr>
+      <tr>
         <td>课程材料</td>
-        <td> <a href="2-2文件结构.pdf"> PDF（503KB） </a> </td>
-      </tr>-->
+        <td> <a href="1.1web前端开发概述.pdf"> PPT课程材料</a></td>
+      </tr>
       <tr>
         <td>我的讲解</td>
         <td>
