--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <td> <a href="2-2-charset-utf-8.html"> UTF-8编码示例 </a> </td>
       <tr>
         <td>课程材料</td>
-        <td> <a href="2-2文件结构.pdf"> PDF（503KB） </a> 
+        <td> <a href="1.1web前端开发概述.pdf">PPT课程材料</a> 
         </td>
       </tr>
       <tr>
