--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>第一学期作品</title>
+    <title>群儿de讲解</title>
     <style>
       table, th, td {
         border: 1.2px solid black;
@@ -54,10 +54,10 @@
         <td> <a href="1.1web前端开发概述.pdf">PPT课程材料</a> 
         </td>
       </tr>
-      <tr>
+      <!--<tr>
         <td>学习时间</td>
         <td> 2019年4月12日，3小时 </a> </td>
-    </tr>
+    </tr>-->
   <!--<tr>
     <td>新单词</td>
     <td> meta（元），character（字符），charset（字符集），head（头），title（标题），body（身体），text（文本），web（网络），doc（文档），type（类型），language（语言）</a> </td>
