--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </tr>
       <tr>
         <td>学习内容</td>
-        <td> 这部分我学到了用meta charset="UTF-8"设置网页字符集。源文件与声明的编码方式都是UTF-8时，才能正常显示。否则就会出现乱码哦</td>
+        <td>web网站分类，以及前端与后端的区别，岗位分为：网页构架师、网页美工、代码开发。</td>
       </tr>
       <!--<tr>
         <td>课程材料</td>
