--- a/306.html
+++ b/306.html
@@ -1,22 +1,29 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>电子书小说</title> 
-        <link rel="icon" href="bitbug_favicon.ico" type="image/x-icon">
-        <link rel="shortcut icon" href="bitbug_favicon.ico" type="image/x-icon">
-        </meta>
-<style>
+  <head>
+    <meta charset="utf-8">
+    <title>QUNER作品集</title> 
+    <link rel="icon" href="bitbug_favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="bitbug_favicon.ico" type="image/x-icon">
+    </meta>
+  <style>
     a {text-decoration:none;}
-    .ul{text-align:center;
-        font-size:50px;}
-        </style>
-    </head>
-        <body style="background-color:#868583;">
-        <!--<h1 align="center">娱乐网</h1>
-            <a href="https://yanlig7.github.io/xiaoyi.io/"></a>-->
-             <ul class="ul"><a href="https://yanlig7.github.io/xiaoyi.io/">
-        <a href="http://cn.epubee.com/books/">电子书</a>
-            <a href="http://www.zxcs.me/">小说</a>
-            </ul>
+    .ol{display:inline-block;
+      font-size:20px;
+    }
+    h1{text-align: center;
+    font-size: 50px;}
+  </style>
+  </head>
+<body style="background-color:#868583;">
+  <h1>QUNER的作品集</h1>
+  <div style="text-align:center;">
+    <ol class="ol">
+      <li><a href="https://github.com/YAnLig7"</a>GitHub主页</li>
+      <li><a href="https://yanlig7.github.io/xcoe17.io/"</a>课程讲解</li>
+      <li><a href="https://yanlig7.github.io/xiaoyi.io/"</a>诗词网站</li>
+      <li>目前还没网站</li>
+      <li>目前还没网站</li>
+    </ol>
+  </div>
     </body>
 </html>
