--- a/306.html
+++ b/306.html
@@ -2,8 +2,8 @@
   <head>
     <meta charset="utf-8">
     <title>QUNER作品集</title> 
-    <link rel="icon" href="bitbug_favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="bitbug_favicon.ico" type="image/x-icon">
+    <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     </meta>
   <style>
     a {text-decoration:none;}
