--- a/306.html
+++ b/306.html
@@ -18,9 +18,9 @@
   <h1>QUNER的作品集</h1>
   <div style="text-align:center;">
     <ol class="ol">
-      <li><a href="https://github.com/Lixceo7"</a>GitHub主页</li>
-      <li><a href="https://Lixceo7.github.io/xcoe17.io/"</a>课程讲解</li>
-      <li><a href="https://Lixceo7.github.io/xiaoyi.io/"</a>诗词网站</li>
+      <li><a href="https://github.com/Lee-tiny-Co7"</a>GitHub主页</li>
+      <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/"</a>课程讲解</li>
+      <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/"</a>诗词网站</li>
       <li>目前还没网站</li>
       <li>目前还没网站</li>
     </ol>
