--- a/306.html
+++ b/306.html
@@ -1,29 +1,37 @@
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>QUNER作品集</title> 
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     </meta>
-  <style>
-    a {text-decoration:none;}
-    .ol{display:inline-block;
-      font-size:20px;
-    }
-    h1{text-align: center;
-    font-size: 50px;}
-  </style>
+    <title>实务学堂</title>
+    <style>body {overflow-x:auto;
+          overflow-y:auto; 
+          margin:0%; 
+          padding:0%; 
+      }
+      .Q  { background-color:#7B618F;
+          padding:4px;
+      }
+       a  {text-decoration:none;
+      }
+      .ul {overflow:hidden;
+          text-align:center; 
+      } li{font-size:20px;
+          font-weight:bold;
+          margin:10px;
+          display:inline; 
+          line-height:50px;
+      }
+    </style>
   </head>
-<body style="background-color:#868583;">
-  <h1>QUNER的作品集</h1>
-  <div style="text-align:center;">
-    <ol class="ol">
-      <li><a href="https://github.com/Lee-tiny-Co7"</a>GitHub主页</li>
-      <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/"</a>课程讲解</li>
-      <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/"</a>诗词网站</li>
-      <li>目前还没网站</li>
-      <li>目前还没网站</li>
-    </ol>
-  </div>
-    </body>
+  <body><div class="Q">
+    <ul class="ul">
+      <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8  ;"</a>GitHub主页</li>
+      <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/" style="color:#C3BBC8;"</a>课程讲解</li>
+      <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/" style="color:#C3BBC8;"</a>诗词网站</li>
+    </ul>
+    </div>
+  </body>
 </html>
