--- a/306.html
+++ b/306.html
@@ -6,7 +6,8 @@
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     </meta>
     <title>实务学堂</title>
-    <style>body {overflow-x:auto;
+    <style>body {style="background-color:#ACA2B2;"
+      overflow-x:auto;
           overflow-y:auto; 
           margin:0%; 
           padding:0%; 
