--- a/306.html
+++ b/306.html
@@ -6,33 +6,35 @@
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     </meta>
     <title>实务学堂</title>
-    <style>body {style="background-color:#ACA2B2;"
-      overflow-x:auto;
+  <style>body {overflow-x:auto;
           overflow-y:auto; 
           margin:0%; 
           padding:0%; 
       }
-      .Q  { background-color:#7B618F;
-          padding:4px;
-      }
-       a  {text-decoration:none;
+      .Q { background-color:#7B618F;
+        padding:4px;}
+      a {text-decoration:none;
       }
       .ul {overflow:hidden;
-          text-align:center; 
-      } li{font-size:20px;
+        text-align:center; 
+      } li {font-size:20px;
           font-weight:bold;
           margin:10px;
           display:inline; 
           line-height:50px;
-      }
+    }
+    ol{text-align:center;}
     </style>
   </head>
-  <body><div class="Q">
+<body style="background-color:#ACA2B2;"><div class="Q">
     <ul class="ul">
-      <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8;"</a>GitHub主页</li>
+      <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8  ;"</a>GitHub主页</li>
       <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/" style="color:#C3BBC8;"</a>课程讲解</li>
       <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/" style="color:#C3BBC8;"</a>诗词网站</li>
     </ul>
     </div>
+  <ol>
+    <li><li>目</li>前<li>还</li>没<li>内</li>容<li>嵌</li>入</li>
+  </ol>
   </body>
 </html>
