--- a/306.html
+++ b/306.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     </meta>
-    <title>实务学堂</title>
+    <title>实务学堂1</title>
   <style>body {overflow-x:auto;
           overflow-y:auto; 
           margin:0%; 
