--- a/306.html
+++ b/306.html
@@ -1,11 +1,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>QUNER作品集</title> 
+    <title>QUNER作品集1</title> 
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     </meta>
-    <title>实务学堂1</title>
   <style>body {overflow-x:auto;
           overflow-y:auto; 
           margin:0%; 
