--- a/306.html
+++ b/306.html
@@ -32,8 +32,6 @@
       <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/" style="color:#C3BBC8;"</a>诗词网站</li>
     </ul>
     </div>
-  <ol>
-    <li><li>目</li>前<li>还</li>没<li>内</li>容<li>嵌</li>入</li>
-  </ol>
+  <p>没有东西</p>
   </body>
 </html>
