--- a/306.html
+++ b/306.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
   <head>
     <meta charset="UTF-8">
     <title>QUNER作品集</title> 
@@ -33,4 +33,40 @@
     </ul>
     </div>
   </body>
+</html> -->
+<html>
+    <head>
+        <meta charset="utf-8">
+    </head>
+    <style>
+    body {
+        margin:0%; 
+        padding:0%;
+    }
+     .content{
+        background-color:pink;
+        padding:4px;
+        overflow:hidden;
+        text-align:center;
+    }
+    a {
+        text-decoration:none;
+    }
+    li {
+       font-size:20px;
+       font-weight:bold;
+       margin:10px;
+       display:inline; 
+       line-height:50px;
+    }
+        
+    </style>
+    
+    <body><div class="content">
+       <ul>
+        <li>< a href=" ">个人博客</ a></li>
+        <li>< a href="https://yixuaner.github.io/poem/">短歌集</ a></li>
+        <li>< a href="https://yixuaner.github.io/zuoye/">web讲课作品</ a></li>
+       </ul>
+    </div></body>
 </html>
