--- a/306.html
+++ b/306.html
@@ -1,7 +1,8 @@
-<!-- <html>
+<html>
   <head>
     <meta charset="UTF-8">
-    <title>QUNER作品集</title> 
+    <title>QUNER作品集</title>
+      </head> 
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     </meta>
@@ -24,7 +25,6 @@
     }
     ol{text-align:center;}
     </style>
-  </head>
 <body style="background-color:#ACA2B2;"><div class="Q">
     <ul class="ul">
       <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8  ;"</a>GitHub主页</li>
@@ -33,7 +33,8 @@
     </ul>
     </div>
   </body>
-</html> -->
+</html>
+<!-- 
 <html>
     <head>
         <meta charset="utf-8">
@@ -69,4 +70,4 @@
         <li>< a href="https://yixuaner.github.io/zuoye/">web讲课作品</ a></li>
        </ul>
     </div></body>
-</html>
+</html> -->
