--- a/306.html
+++ b/306.html
@@ -11,22 +11,21 @@
           margin:0%; 
           padding:0%; 
       }
-      .Q { background-color:#7B618F;
-        padding:4px;}
-      a {text-decoration:none;
-      }
-      .ul {overflow:hidden;
-        text-align:center; 
-      } li {font-size:20px;
+      .GitHub {background-color:#7B618F;
+          padding:4px;
+          overflow:hidden;
+          text-align:center; }
+      a  {text-decoration:none;}
+     li  {font-size:20px;
           font-weight:bold;
           margin:10px;
           display:inline; 
           line-height:50px;
     }
-    ol{text-align:center;}
+     p {text-align:center;}
     </style>
-<body style="background-color:#ACA2B2;"><div class="Q">
-    <ul class="ul">
+<body><div class="GitHub">
+    <ul>
       <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8  ;"</a>GitHub主页</li>
       <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/" style="color:#C3BBC8;"</a>课程讲解</li>
       <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/" style="color:#C3BBC8;"</a>诗词网站</li>
