--- a/306.html
+++ b/306.html
@@ -2,7 +2,6 @@
   <head>
     <meta charset="UTF-8">
     <title>QUNER作品集</title>
-      </head> 
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     </meta>
@@ -19,14 +18,15 @@
      li  {font-size:20px;
           font-weight:bold;
           margin:10px;
-          display:inline; 
+          display:inline;
           line-height:50px;
     }
      p {text-align:center;}
     </style>
+    </head> 
 <body><div class="GitHub">
     <ul>
-      <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8  ;"</a>GitHub主页</li>
+      <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8;"</a>GitHub主页</li>
       <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/" style="color:#C3BBC8;"</a>课程讲解</li>
       <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/" style="color:#C3BBC8;"</a>诗词网站</li>
     </ul>
@@ -34,7 +34,7 @@
     <p>目前没有内容</p>
   </body>
 </html>
-<!-- 
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -65,9 +65,9 @@
     
     <body><div class="content">
        <ul>
-        <li>< a href=" ">个人博客</ a></li>
-        <li>< a href="https://yixuaner.github.io/poem/">短歌集</ a></li>
-        <li>< a href="https://yixuaner.github.io/zuoye/">web讲课作品</ a></li>
+        <li>< a href="https://yixuaner.github.io/poem">qqq</a></li>
+        <li>< a href="https://yixuaner.github.io/poem/">www</a></li>
+        <li>< a href="https://yixuaner.github.io/zuoye/">eee</a></li>
        </ul>
     </div></body>
-</html> -->
+</html>
