--- a/306.html
+++ b/306.html
@@ -21,54 +21,18 @@
           display:inline;
           line-height:50px;
     }
-     p {text-align:center;}
+     p {text-align:center;
+        font-size:20px;
+        font-weight:bold;}
     </style>
     </head> 
-<body><div class="GitHub">
+<body style="color:#727173;"><div class="GitHub">
     <ul>
       <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8;"</a>GitHub主页</li>
       <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/" style="color:#C3BBC8;"</a>课程讲解</li>
       <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/" style="color:#C3BBC8;"</a>诗词网站</li>
     </ul>
     </div>
-    <p>目前没有内容</p>
   </body>
-</html>
-
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <style>
-    body {
-        margin:0%; 
-        padding:0%;
-    }
-     .content{
-        background-color:pink;
-        padding:4px;
-        overflow:hidden;
-        text-align:center;
-    }
-    a {
-        text-decoration:none;
-    }
-    li {
-       font-size:20px;
-       font-weight:bold;
-       margin:10px;
-       display:inline; 
-       line-height:50px;
-    }
-        
-    </style>
-    
-    <body><div class="content">
-       <ul>
-        <li><a href="https://yixuaner.github.io/poem">qqq</a></li>
-        <li><a href="https://yixuaner.github.io/poem/">www</a></li>
-        <li><a href="https://yixuaner.github.io/zuoye/">eee</a></li>
-       </ul>
-    </div></body>
-    <p>目前没有</p>
+   <p>目前没有内容</p>
 </html>
