--- a/306.html
+++ b/306.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>QUNER作品集</title>
+<meta charset="utf-8">
+  <title>QUNER作品集</title>
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
-    </meta>
+</meta>
+  </head> 
   <style>body {overflow-x:auto;
           overflow-y:auto; 
           margin:0%; 
@@ -25,7 +26,6 @@
         font-size:20px;
         font-weight:bold;}
     </style>
-    </head> 
 <body style="color:#727173;"><div class="GitHub">
     <ul>
       <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8;"</a>GitHub主页</li>
@@ -35,4 +35,42 @@
     </div>
   </body>
    <p>目前没有内容</p>
+</html>
+
+<html>
+    <head>
+        <meta charset="utf-8">
+    </head>
+    <style>
+    body {
+        margin:0%; 
+        padding:0%;
+    }
+     .content{
+        background-color:pink;
+        padding:4px;
+        overflow:hidden;
+        text-align:center;
+    }
+    a {
+        text-decoration:none;
+    }
+    li {
+       font-size:20px;
+       font-weight:bold;
+       margin:10px;
+       display:inline; 
+       line-height:50px;
+    }
+        
+    </style>
+    
+    <body><div class="content">
+       <ul>
+        <li><a href="https://yixuaner.github.io/poem">qqq</a></li>
+        <li><a href="https://yixuaner.github.io/poem/">www</a></li>
+        <li><a href="https://yixuaner.github.io/zuoye/">eee</a></li>
+       </ul>
+    </div></body>
+    <p>目前没有</p>
 </html>
