--- a/306.html
+++ b/306.html
@@ -4,39 +4,47 @@
   <title>QUNER作品集</title>
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
-</meta>
   </head> 
-  <style>body {overflow-x:auto;
-          overflow-y:auto; 
-          margin:0%; 
-          padding:0%; 
+  <style>
+    body {
+        overflow-x:auto;
+        overflow-y:auto; 
+        margin:0%; 
+        padding:0%; 
       }
-      .GitHub {background-color:#7B618F;
-          padding:4px;
-          overflow:hidden;
-          text-align:center; }
-      a  {text-decoration:none;}
-     li  {font-size:20px;
-          font-weight:bold;
-          margin:10px;
-          display:inline;
-          line-height:50px;
+      .GitHub {
+        background-color:#7B618F;
+        padding:4px;
+        overflow:hidden;
+        text-align:center;
+        }
+      a  {
+        text-decoration:none;
+      }
+     li  {
+      font-size:20px;
+        font-weight:bold;
+        margin:10px;
+        display:inline;
+        line-height:50px;
     }
-     p {text-align:center;
-        font-size:20px;
-        font-weight:bold;}
+     p {
+      text-align:center;
+      font-size:20px;
+      font-weight:bold;
+    }
     </style>
 <body style="color:#727173;"><div class="GitHub">
     <ul>
-      <li><a href="https://github.com/Lee-tiny-Co7" style="color:#C3BBC8;"</a>GitHub主页</li>
-      <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/" style="color:#C3BBC8;"</a>课程讲解</li>
-      <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/" style="color:#C3BBC8;"</a>诗词网站</li>
+      <li><a href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+      <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+      <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
     </ul>
     </div>
   </body>
    <p>目前没有内容</p>
 </html>
-
+<!-- 
 <html>
     <head>
         <meta charset="utf-8">
@@ -73,4 +81,4 @@
        </ul>
     </div></body>
     <p>目前没有</p>
-</html>
+</html> -->
