--- a/306.html
+++ b/306.html
@@ -42,6 +42,13 @@
     </ul>
     </div>
   </body>
+  <body>
+<select>
+  <option>GitHub</option>
+  <option>GitHub</option>
+  <option>GitHub</option>
+</select>
+</body>
    <p>目前没有内容</p>
 </html>
 <!-- 
