--- a/306.html
+++ b/306.html
@@ -30,7 +30,7 @@
     }
      p {
       text-align:center;
-      font-size:20px;
+      font-size:40px;
       font-weight:bold;
     }
     </style>
@@ -43,7 +43,7 @@
     </div>
   </body>
   <body>
-<select>
+<select class="p">
   <option>GitHub</option>
   <option>GitHub</option>
   <option>GitHub</option>
@@ -51,41 +51,3 @@
 </body>
    <p>目前没有内容</p>
 </html>
-<!-- 
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <style>
-    body {
-        margin:0%; 
-        padding:0%;
-    }
-     .content{
-        background-color:pink;
-        padding:4px;
-        overflow:hidden;
-        text-align:center;
-    }
-    a {
-        text-decoration:none;
-    }
-    li {
-       font-size:20px;
-       font-weight:bold;
-       margin:10px;
-       display:inline; 
-       line-height:50px;
-    }
-        
-    </style>
-    
-    <body><div class="content">
-       <ul>
-        <li><a href="https://yixuaner.github.io/poem">qqq</a></li>
-        <li><a href="https://yixuaner.github.io/poem/">www</a></li>
-        <li><a href="https://yixuaner.github.io/zuoye/">eee</a></li>
-       </ul>
-    </div></body>
-    <p>目前没有</p>
-</html> -->
