--- a/306.html
+++ b/306.html
@@ -33,6 +33,34 @@
       font-size:40px;
       font-weight:bold;
     }
+    .git {
+    background-color:#4CAF50;
+    color:white;
+    padding:16px;
+    font-size:20px;
+}
+
+.git {
+    position:relative;
+    display:inline-block;
+}
+
+.button {
+    display:none;
+    position:absolute;
+    background-color:#f9f9f9;
+    }
+
+.button a {
+    color:black;
+    padding: 12px 16px;
+    text-decoration:none;
+    display:block;
+}
+.dropdown:hover 
+  .button {
+    display:block;
+}
     </style>
 <body style="color:#727173;"><div class="GitHub">
     <ul>
@@ -43,11 +71,57 @@
     </div>
   </body>
   <body>
-<select class="p">
+<!-- <select>
   <option>GitHub</option>
   <option>GitHub</option>
   <option>GitHub</option>
-</select>
+</select> -->
 </body>
+<div class="git">
+  <button class="dropbtn">GitHub</button>
+  <div class="button">
+    <a href="https://github.com/Lee-tiny-Co7">GitHub</a>
+  </div>
+</div>
    <p>目前没有内容</p>
 </html>
+<!-- .git {
+    background-color:#4CAF50;
+    color:white;
+    padding:16px;
+    font-size:20px;
+}
+
+.git {
+    position:relative;
+    display:inline-block;
+}
+
+.button {
+    display:none;
+    position:absolute;
+    background-color:#f9f9f9;
+    }
+
+.button a {
+    color:black;
+    padding: 12px 16px;
+    text-decoration:none;
+    display:block;
+}
+.dropdown:hover 
+  .button {
+    display:block;
+}
+</style>
+</head>
+<body>
+<div class="git">
+  <button class="dropbtn">GitHub</button>
+  <div class="button">
+    <a href=""></a>
+  </div>
+</div>
+</body>
+</html>
+ -->
