--- a/306.html
+++ b/306.html
@@ -57,7 +57,7 @@
     text-decoration:none;
     display:block;
 }
-.dropdown:hover 
+.button:hover 
   .button {
     display:block;
 }
@@ -85,43 +85,3 @@
 </div>
    <p>目前没有内容</p>
 </html>
-<!-- .git {
-    background-color:#4CAF50;
-    color:white;
-    padding:16px;
-    font-size:20px;
-}
-
-.git {
-    position:relative;
-    display:inline-block;
-}
-
-.button {
-    display:none;
-    position:absolute;
-    background-color:#f9f9f9;
-    }
-
-.button a {
-    color:black;
-    padding: 12px 16px;
-    text-decoration:none;
-    display:block;
-}
-.dropdown:hover 
-  .button {
-    display:block;
-}
-</style>
-</head>
-<body>
-<div class="git">
-  <button class="dropbtn">GitHub</button>
-  <div class="button">
-    <a href=""></a>
-  </div>
-</div>
-</body>
-</html>
- -->
