--- a/306.html
+++ b/306.html
@@ -7,29 +7,29 @@
   </head> 
   <style>
     body {
-        overflow-x:auto;
-        overflow-y:auto; 
-        margin:0%; 
-        padding:0%; 
+        /*overflow-x:auto;
+        overflow-y:auto;*/
+        margin:0%;/*外边距*/
+        padding:0%;/*内边距*/
       }
       .GitHub {
-        background-color:#7B618F;
-        padding:4px;
+        background-color:#7B618F;/*16进制颜色*/
+        padding:4px;/*内边距*/
         overflow:hidden;
-        text-align:center;
+        text-align:center;/*居中*/
         }
-      a  {
-        text-decoration:none;
+      a {
+        text-decoration:none;/*去除链接下划线*/
       }
-     li  {
-      font-size:20px;
-        font-weight:bold;
-        margin:10px;
+     li {
+        font-size:20px;/*字体大小：px或者%*/
+        font-weight:bold;/*字体样式*/
+        margin:10px;/*外边距*/
         display:inline;
         line-height:50px;
     }
      p {
-      text-align:center;
+      text-align:center;/*文字居中*/
       font-size:40px;
       font-weight:bold;
     }
