--- a/306.html
+++ b/306.html
@@ -21,6 +21,8 @@
       a {
         text-decoration:none;/*去除链接下划线*/
       }
+      a {color:#97909D}
+      a:hover{color:#D9D2E0}
      li {
         font-size:20px;/*字体大小：px或者%*/
         font-weight:bold;/*字体样式*/
