--- a/306.html
+++ b/306.html
@@ -22,7 +22,7 @@
         text-decoration:none;/*去除链接下划线*/
       }
       a {color:#97909D}
-      a:hover{color:#D9D2E0}
+      a.hub:hover{color:#D9D2E0}
      li {
         font-size:20px;/*字体大小：px或者%*/
         font-weight:bold;/*字体样式*/
@@ -44,7 +44,7 @@
     </style>
 <body style="color:#727173;"><div class="GitHub">
     <ul>
-      <li><a href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+      <li><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
       <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
       <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
     </ul>
