--- a/306.html
+++ b/306.html
@@ -45,8 +45,8 @@
 <body style="color:#727173;"><div class="GitHub">
     <ul>
       <li><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
-      <li><a href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
-      <li><a href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
+      <li><a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+      <li><a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
     </ul>
     </div>
   </body>
