--- a/306.html
+++ b/306.html
@@ -40,7 +40,11 @@
     color:white;
     padding:16px;
     font-size:20px;
-}
+    }
+    table, th, td {
+    border: 1.2px solid black;
+    background-color:white;
+    }
     </style>
 <body style="color:#727173;"><div class="GitHub">
     <ul>
@@ -51,6 +55,22 @@
     </div>
   </body>
   <body>
+    <table width="300" border="2"></table><!-- 表格宽度和粗细 -->
+    <tr>
+      <th align="center">GitHub</th>
+      <th align="center">课程讲解</th>
+      <th align="center">诗词网站</th>
+    </tr>
+    <tr>
+      <td align="center">github</td>
+      <td align="center">课件讲解</td>
+      <td align="center">诗词</td>
+    </tr>
+    <tr>
+      <td align="center">github</td>
+      <td align="center">课件讲解</td>
+      <td align="center">诗词</td>
+    </tr>
 <!-- <select>
   <option>GitHub</option>
   <option>GitHub</option>
