--- a/306.html
+++ b/306.html
@@ -55,7 +55,7 @@
     </div>
   </body>
   <body>
-    <table width="300" border="2"></table><!-- 表格宽度和粗细 -->
+    <table width="300" border="2"><!-- 表格宽度和粗细 -->
     <tr>
       <th align="center">GitHub</th>
       <th align="center">课程讲解</th>
@@ -71,6 +71,7 @@
       <td align="center">课件讲解</td>
       <td align="center">诗词</td>
     </tr>
+    </table>
 <!-- <select>
   <option>GitHub</option>
   <option>GitHub</option>
