--- a/306.html
+++ b/306.html
@@ -55,22 +55,22 @@
     </div>
   </body>
   <body>
-    
-    <table width="300" border="2"><!-- 表格宽度和粗细 -->
+
+    <table align="center" width="300" border="2"><!-- 表格宽度和粗细 -->
     <tr>
-      <th align="center">GitHub</th>
-      <th align="center">课程讲解</th>
-      <th align="center">诗词网站</th>
+      <th align="center" href="https://github.com/Lee-tiny-Co7">GitHub</th>
+      <th align="center" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</th>
+      <th align="center" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</th>
     </tr>
     <tr>
-      <td align="center">github</td>
-      <td align="center">课件讲解</td>
-      <td align="center">诗词</td>
+      <td align="center" href="https://github.com/Lee-tiny-Co7">github</td>
+      <td align="center" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</td>
+      <td align="center" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">诗词</td>
     </tr>
     <tr>
-      <td align="center">github</td>
-      <td align="center">课件讲解</td>
-      <td align="center">诗词</td>
+      <td align="center" href="https://github.com/Lee-tiny-Co7">github</td>
+      <td align="center" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</td>
+      <td align="center" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词</td>
     </tr>
     </table>
 <!-- <select>
