--- a/306.html
+++ b/306.html
@@ -55,22 +55,21 @@
     </div>
   </body>
   <body>
-
     <table align="center" width="300" border="2"><!-- 表格宽度和粗细 -->
     <tr>
-      <th align="center" href="https://github.com/Lee-tiny-Co7">GitHub</th>
-      <th align="center" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</th>
-      <th align="center" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</th>
+      <th> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></th>
+      <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></th>
+      <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></th>
     </tr>
     <tr>
-      <td align="center" href="https://github.com/Lee-tiny-Co7">github</td>
-      <td align="center" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</td>
-      <td align="center" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">诗词</td>
+      <td> <a class="hub" href="https://github.com/Lee-tiny-Co7">github</a></td>
+      <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</a></td>
+      <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">诗词</a></td>
     </tr>
     <tr>
-      <td align="center" href="https://github.com/Lee-tiny-Co7">github</td>
-      <td align="center" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</td>
-      <td align="center" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词</td>
+      <td> <a class="hub" href="https://github.com/Lee-tiny-Co7">github</a></td>
+      <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</a></td>
+      <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词</a></td>
     </tr>
     </table>
 <!-- <select>
