--- a/306.html
+++ b/306.html
@@ -1,52 +1,58 @@
 <html>
   <head>
-<meta charset="utf-8">
-  <title>QUNER作品集</title>
+    <meta charset="utf-8">
+    <title>QUNER作品集</title>
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
   </head> 
   <style>
     body {
-        /*overflow-x:auto;
-        overflow-y:auto;*/
-        margin:0%;/*外边距*/
-        padding:0%;/*内边距*/
-      }
-      .GitHub {
-        background-color:#7B618F;/*16进制颜色*/
-        padding:4px;/*内边距*/
-        overflow:hidden;
-        text-align:center;/*居中*/
-        }
-      a {
-        text-decoration:none;/*去除链接下划线*/
-      }
-      a {color:#97909D}
-      a.hub:hover{color:#D9D2E0}
-     li {
-        font-size:20px;/*字体大小：px或者%*/
-        font-weight:bold;/*字体样式*/
-        margin:10px;/*外边距*/
-        display:inline;
-        line-height:50px;
+      /*overflow-x:auto;
+      overflow-y:auto;*/
+      margin:0%;/*外边距*/
+      padding:0%;/*内边距*/
     }
-     p {
+    .GitHub {
+      background-color:#7B618F;/*16进制颜色*/
+      padding:4px;/*内边距*/
+      overflow:hidden;
+      text-align:center;/*居中*/
+    }
+    a {
+      text-decoration:none;/*去除链接下划线*/
+    }
+    a {color:#000000
+    }
+    a.hub:hover{color:#ff00b8
+    }
+    li {
+      font-size:20px;/*字体大小：px或者%*/
+      font-weight:bold;/*字体样式*/
+      margin:10px;/*外边距*/
+      display:inline;
+      line-height:50px;
+    }
+    p {
       text-align:center;/*文字居中*/
       font-size:40px;
       font-weight:bold;
     }
     .git {
-    background-color:#4CAF50;
-    color:white;
-    padding:16px;
-    font-size:20px;
+      background-color:#4CAF50;
+      color:white;
+      padding:16px;
+      font-size:20px;
     }
     table, th, td {
-    border: 1.2px solid black;
-    background-color:white;
+      font-weight:bold;
+      padding:20px;
+      font-size:20.5px;
+      text-align:center;
+      border: 1px solid rgba(35, 0, 255, 0.38);
+      background-color:rgba(0, 163, 255, 0.38);
     }
-    </style>
-<body style="color:#727173;"><div class="GitHub">
+  </style>
+  <body style="color:#727173;"><div class="GitHub">
     <ul>
       <li><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
       <li><a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
@@ -55,28 +61,28 @@
     </div>
   </body>
   <body>
-    <table align="center" width="300" border="2"><!-- 表格宽度和粗细 -->
-    <tr>
-      <th> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></th>
-      <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></th>
-      <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></th>
-    </tr>
-    <tr>
-      <td> <a class="hub" href="https://github.com/Lee-tiny-Co7">github</a></td>
-      <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</a></td>
-      <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">诗词</a></td>
-    </tr>
-    <tr>
-      <td> <a class="hub" href="https://github.com/Lee-tiny-Co7">github</a></td>
-      <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</a></td>
-      <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词</a></td>
-    </tr>
+    <table align="center" width="600"  border="2"><!-- 表格宽度和粗细 -->
+      <tr>
+        <th> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></th>
+        <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></th>
+        <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></th>
+      </tr>
+      <tr>
+        <td> <a class="hub" href="https://github.com/Lee-tiny-Co7">github</a></td>
+        <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</a></td>
+        <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">诗词</a></td>
+      </tr>
+      <tr>
+        <td> <a class="hub" href="https://github.com/Lee-tiny-Co7">github</a></td>
+        <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</a></td>
+        <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词</a></td>
+      </tr>
     </table>
-<!-- <select>
-  <option>GitHub</option>
-  <option>GitHub</option>
-  <option>GitHub</option>
+    <!-- <select>
+<option>GitHub</option>
+<option>GitHub</option>
+<option>GitHub</option>
 </select> -->
-</body>
-   <p>目前没有内容</p>
+  </body>
+  <p>目前没有内容</p>
 </html>
