--- a/306.html
+++ b/306.html
@@ -48,8 +48,8 @@
       padding:20px;
       font-size:20.5px;
       text-align:center;
-      border: 1px solid rgba(35, 0, 255, 0.38);
-      background-color:rgba(0, 163, 255, 0.38);
+      border: 1px solid rgba(35, 0, 255, 0.38);/*来源于HTML颜色代码*/
+      background-color:rgba(0, 163, 255, 0.38);/*来源于HTML颜色代码*/
     }
   </style>
   <body style="color:#727173;"><div class="GitHub">
@@ -78,11 +78,6 @@
         <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词</a></td>
       </tr>
     </table>
-    <!-- <select>
-<option>GitHub</option>
-<option>GitHub</option>
-<option>GitHub</option>
-</select> -->
   </body>
   <p>目前没有内容</p>
 </html>
