--- a/306.html
+++ b/306.html
@@ -61,7 +61,7 @@
     </div>
   </body>
   <body>
-    <table align="center" width="600"  border="2"><!-- 表格宽度和粗细 -->
+    <table align="center" width="600px"  border="2"><!-- 表格宽度和粗细 -->
       <tr>
         <th> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></th>
         <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></th>
