--- a/306.html
+++ b/306.html
@@ -66,6 +66,9 @@
         <th> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></th>
         <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></th>
         <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></th>
+        <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></th>
+        <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></th>
+        <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></th>
       </tr>
       <tr>
         <td> <a class="hub" href="https://github.com/Lee-tiny-Co7">github</a></td>
