--- a/306.html
+++ b/306.html
@@ -43,7 +43,7 @@
       padding:16px;
       font-size:20px;
     }
-    table, th, td {
+    table, th, td, tr {
       font-weight:bold;
       padding:20px;
       font-size:20.5px;
@@ -63,19 +63,31 @@
   <body>
     <table align="center" width="600px"  border="2"><!-- 表格宽度和粗细 -->
       <tr>
-        <th> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></th>
-        <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></th>
-        <th> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></th>
+        <td>
+          <ul>
+            <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">1:GitHub主页</a></li>
+            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">2:课程讲解</a></li>
+            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">3:诗词网站</a></li>
+          </ul>
+        </td>
       </tr>
       <tr>
-        <td> <a class="hub" href="https://github.com/Lee-tiny-Co7">github</a></td>
-        <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</a></td>
-        <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">诗词</a></td>
+        <td>
+          <ul>
+            <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
+          </ul>
+        </td>
       </tr>
       <tr>
-        <td> <a class="hub" href="https://github.com/Lee-tiny-Co7">github</a></td>
-        <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课件讲解</a></td>
-        <td> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词</a></td>
+        <td>
+          <ul>
+            <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
+          </ul>
+        </td>
       </tr>
     </table>
   </body>
