--- a/306.html
+++ b/306.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -26,16 +27,17 @@
     a.hub:hover{color:#ff00b8
     }
     li {
-      font-size:20px;/*字体大小：px或者%*/
+      font-size:15px;/*字体大小：px或者%*/
       font-weight:bold;/*字体样式*/
       margin:10px;/*外边距*/
-      display:inline;
-      line-height:50px;
+      list-style-type:none;
+      line-height:20px;
     }
     p {
       text-align:center;/*文字居中*/
-      font-size:40px;
+      font-size:20px;
       font-weight:bold;
+      display:inline;
     }
     .git {
       background-color:#4CAF50;
@@ -51,17 +53,20 @@
       border: 1px solid rgba(35, 0, 255, 0.38);/*来源于HTML颜色代码*/
       background-color:rgba(0, 163, 255, 0.38);/*来源于HTML颜色代码*/
     }
+    .text {text-align:center;
+      letter-spacing:3px;}
   </style>
   <body style="color:#727173;"><div class="GitHub">
     <ul>
-      <li><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
-      <li><a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
-      <li><a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
+      <p><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></p>
+      <p><a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></p>
+      <p><a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></p>
     </ul>
     </div>
   </body>
   <body>
-    <table align="center" width="600px"  border="2"><!-- 表格宽度和粗细 -->
+    <div class="text">
+      <table align="center" width="300px"  border="2"><!-- 表格宽度和粗细 -->
       <tr>
         <td>
           <ul>
@@ -77,8 +82,6 @@
             <li>10:</li>
           </ul>
         </td>
-      </tr>
-      <tr>
         <td>
           <ul>
             <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
@@ -95,6 +98,6 @@
         </td>
       </tr>
     </table>
+    </div>
   </body>
-  <p>目前没有内容</p>
 </html>
