--- a/306.html
+++ b/306.html
@@ -18,6 +18,7 @@
       padding:4px;/*内边距*/
       overflow:hidden;
       text-align:center;/*居中*/
+      letter-spacing:5px;
     }
     a {
       text-decoration:none;/*去除链接下划线*/
