--- a/306.html
+++ b/306.html
@@ -65,7 +65,7 @@
     </ul>
     </div>
   </body>
-  <body background="github.jpg" style="background-repeat:no-repeat;    background-size:100% 100%; background-attachment:fixed;">
+  <body background="github.jpg">
     <div class="text">
       <table align="center" width="300px"  border="2"><!-- 表格宽度和粗细 -->
       <tr>
