--- a/306.html
+++ b/306.html
@@ -57,7 +57,7 @@
     .text {text-align:center;
       letter-spacing:3px;}
   </style>
-  <body style="color:#727173;"><div class="GitHub">
+  <body background="github.jpg" style="color:#727173;"><div class="GitHub">
     <ul>
       <p><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></p>
       <p><a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></p>
@@ -65,7 +65,7 @@
     </ul>
     </div>
   </body>
-  <body background="github.jpg" style="background-repeat:no-repeat;    background-size:100% 100%; background-attachment:fixed;">
+  <body>
     <div class="text">
       <table align="center" width="300px"  border="2"><!-- 表格宽度和粗细 -->
       <tr>
