--- a/306.html
+++ b/306.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <meta charset="utf-8">
@@ -57,7 +56,7 @@
     .text {text-align:center;
       letter-spacing:3px;}
   </style>
-  <body style="color:#727173;"><div class="GitHub">
+  <body background="github.jpg" style="color:#727173;"><div class="GitHub">
     <ul>
       <p><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></p>
       <p><a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></p>
@@ -65,7 +64,7 @@
     </ul>
     </div>
   </body>
-  <body background="github.jpg">
+  <body>
     <div class="text">
       <table align="center" width="300px"  border="2"><!-- 表格宽度和粗细 -->
       <tr>
