--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>群儿de讲解</title>
+  </head> 
     <style>
       table, th, td {
         border: 1.2px solid black;
@@ -68,6 +70,5 @@
 </tr>-->
 <tr>
 </table>
-
 </body>
 </html>
