--- a/306.html
+++ b/306.html
@@ -4,8 +4,7 @@
     <title>QUNER作品集</title>
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head> 
   <style>
     body {
@@ -20,6 +19,7 @@
       overflow:hidden;
       text-align:center;/*居中*/
       letter-spacing:5px;
+      width:400px;
     }
     a {
       text-decoration:none;/*去除链接下划线*/
@@ -31,13 +31,13 @@
     li {
       font-size:15px;/*字体大小：px或者%*/
       font-weight:bold;/*字体样式*/
-      margin:10px;/*外边距*/
+      margin:8px;/*外边距*/
       list-style-type:none;
       line-height:20px;
     }
     p {
-      text-align:center;/*文字居中*/
-      font-size:20px;
+/*      text-align:center;*/
+      font-size:12px;
       font-weight:bold;
       display:inline;
     }
@@ -45,7 +45,7 @@
       background-color:#4CAF50;
       color:white;
       padding:16px;
-      font-size:20px;
+      font-size:50px;
     }
     table, th, td, tr {
       font-weight:bold;
@@ -69,37 +69,37 @@
   <body>
     <div class="text">
       <table align="center" width="300px"  border="2"><!-- 表格宽度和粗细 -->
-      <tr>
-        <td>
-          <ul>
-            <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">1:GitHub主页</a></li>
-            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">2:课程讲解</a></li>
-            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">3:诗词网站</a></li>
-            <li>4:</li>
-            <li>5:</li>
-            <li>6:</li>
-            <li>7:</li>
-            <li>8:</li>
-            <li>9:</li>
-            <li>10:</li>
-          </ul>
-        </td>
-        <td>
-          <ul>
-            <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
-            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
-            <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
-            <li>4:</li>
-            <li>5:</li>
-            <li>6:</li>
-            <li>7:</li>
-            <li>8:</li>
-            <li>9:</li>
-            <li>10:</li>
-          </ul>
-        </td>
-      </tr>
-    </table>
+        <tr>
+          <td>
+            <ul>
+              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">1:GitHub主页</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">2:课程讲解</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">3:诗词网站</a></li>
+              <li>4:</li>
+              <li>5:</li>
+              <li>6:</li>
+              <li>7:</li>
+              <li>8:</li>
+              <li>9:</li>
+              <li>10:</li>
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
+              <li>4:</li>
+              <li>5:</li>
+              <li>6:</li>
+              <li>7:</li>
+              <li>8:</li>
+              <li>9:</li>
+              <li>10:</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
