--- a/306.html
+++ b/306.html
@@ -55,14 +55,14 @@
       background-color:rgba(0, 163, 255, 0.38);/*来源于HTML颜色代码*/
     }
     .text {text-align:center;
-      letter-spacing:3px;}
+      letter-spacing:3px;
+    }
+    #CSS {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   </style>
   <body background="github.jpg" style="color:#727173;"><div class="GitHub">
     <ul>
-      <p><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></p>
-      <p><a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></p>
-      <p><a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></p>
-    </ul>
+      <p id="CSS"><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></p>
     </div>
   </body>
   <body>
