--- a/306.html
+++ b/306.html
@@ -19,6 +19,9 @@
       overflow:hidden;
       text-align:center;/*居中*/
       letter-spacing:5px;
+      position:fixed;
+      top:0px;
+      left:0px;
     }
     a {
       text-decoration:none;/*去除链接下划线*/
