--- a/306.html
+++ b/306.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,19 +9,18 @@
   </head> 
   <style>
     body {
-      /*overflow-x:auto;
-      overflow-y:auto;*/
       margin:0%;/*外边距*/
-      padding:0%;/*内边距*/
     }
     .GitHub {
       background-color:#7B618F;/*16进制颜色*/
-      padding:4px;/*内边距*/
-      overflow:hidden;
+      padding:10px;/*内边距*/
       text-align:center;/*居中*/
-      letter-spacing:5px;
       top:0px;
       left:0px;
+    }
+    p {
+      text-align:center;
+      font-size:20px;
     }
     a {
       text-decoration:none;/*去除链接下划线*/
@@ -35,12 +35,6 @@
       margin:8px;/*外边距*/
       list-style-type:none;
       line-height:20px;
-    }
-    p {
-/*      text-align:center;*/
-      font-size:12px;
-      font-weight:bold;
-      display:inline;
     }
     .git {
       background-color:#4CAF50;
@@ -60,47 +54,48 @@
       letter-spacing:3px;
     }
     #CSS {
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 8px 6px rgba(0,0,0,0.23);
   </style>
   <body background="github.jpg" style="color:#727173;"><div class="GitHub">
     <ul>
       <p id="CSS"><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></p>
-    </div>
-  </body>
-  <body>
-    <div class="text">
-      <table align="center" width="300px"  border="2"><!-- 表格宽度和粗细 -->
-        <tr>
-          <td>
-            <ul>
-              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">1:GitHub主页</a></li>
-              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">2:课程讲解</a></li>
-              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">3:诗词网站</a></li>
-              <li>4:</li>
-              <li>5:</li>
-              <li>6:</li>
-              <li>7:</li>
-              <li>8:</li>
-              <li>9:</li>
-              <li>10:</li>
-            </ul>
-          </td>
-          <td>
-            <ul>
-              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
-              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
-              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
-              <li>4:</li>
-              <li>5:</li>
-              <li>6:</li>
-              <li>7:</li>
-              <li>8:</li>
-              <li>9:</li>
-              <li>10:</li>
-            </ul>
-          </td>
-        </tr>
-      </table>
-    </div>
-  </body>
-</html>
+    </ul>
+      </div>
+    </body>
+    <body>
+      <div class="text">
+        <table align="center" width="300px"  border="2">
+          <tr>
+            <td>
+              <ul>
+                <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">1:GitHub主页</a></li>
+                <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">2:课程讲解</a></li>
+                <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">3:诗词网站</a></li>
+                <li>4:</li>
+                <li>5:</li>
+                <li>6:</li>
+                <li>7:</li>
+                <li>8:</li>
+                <li>9:</li>
+                <li>10:</li>
+              </ul>
+            </td>
+            <td>
+              <ul>
+                <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+                <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+                <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
+                <li>4:</li>
+                <li>5:</li>
+                <li>6:</li>
+                <li>7:</li>
+                <li>8:</li>
+                <li>9:</li>
+                <li>10:</li>
+              </ul>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </body>
+    </html>
