--- a/306.html
+++ b/306.html
@@ -1,11 +1,9 @@
-
 <html>
   <head>
     <meta charset="utf-8">
     <title>QUNER作品集</title>
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head> 
   <style>
     body {
@@ -15,8 +13,6 @@
       background-color:#7B618F;/*16进制颜色*/
       padding:10px;/*内边距*/
       text-align:center;/*居中*/
-      top:0px;
-      left:0px;
     }
     p {
       text-align:center;
@@ -30,72 +26,66 @@
     a.hub:hover{color:#ff00b8
     }
     li {
-      font-size:15px;/*字体大小：px或者%*/
-      font-weight:bold;/*字体样式*/
-      margin:8px;/*外边距*/
+      font-size:15px;
       list-style-type:none;
-      line-height:20px;
-    }
-    .git {
-      background-color:#4CAF50;
-      color:white;
-      padding:16px;
-      font-size:50px;
     }
     table, th, td, tr {
       font-weight:bold;
-      padding:20px;
-      font-size:20.5px;
+      padding:15px;
+      font-size:20px;
       text-align:center;
-      border: 1px solid rgba(35, 0, 255, 0.38);/*来源于HTML颜色代码*/
-      background-color:rgba(0, 163, 255, 0.38);/*来源于HTML颜色代码*/
+      border: 1px solid rgba(35, 0, 255, 0.38);
+      background-color:rgba(0, 163, 255, 0.38);
     }
     .text {text-align:center;
-      letter-spacing:3px;
     }
     #CSS {
-      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 8px 6px rgba(0,0,0,0.23);
+      text-align:center;
+      box-shadow: 0 10px 1px rgba(0,0,0,0.19),6px 6px rgba(0, 0, 0, 0.23);
+      div {
+        margin:auto;
+      }
   </style>
   <body background="github.jpg" style="color:#727173;"><div class="GitHub">
     <ul>
       <p id="CSS"><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></p>
     </ul>
-      </div>
-    </body>
-    <body>
-      <div class="text">
-        <table align="center" width="300px"  border="2">
-          <tr>
-            <td>
-              <ul>
-                <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">1:GitHub主页</a></li>
-                <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">2:课程讲解</a></li>
-                <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">3:诗词网站</a></li>
-                <li>4:</li>
-                <li>5:</li>
-                <li>6:</li>
-                <li>7:</li>
-                <li>8:</li>
-                <li>9:</li>
-                <li>10:</li>
-              </ul>
-            </td>
-            <td>
-              <ul>
-                <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
-                <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
-                <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
-                <li>4:</li>
-                <li>5:</li>
-                <li>6:</li>
-                <li>7:</li>
-                <li>8:</li>
-                <li>9:</li>
-                <li>10:</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
-      </div>
-    </body>
-    </html>
+    </div>
+  </body>
+  <body>
+    <div class="text">
+      <table align="center" width="300px"  border="2">
+        <tr>
+          <td>
+            <ul>
+              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">1:GitHub主页</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">2:课程讲解</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">3:诗词网站</a></li>
+              <li>4:</li>
+              <li>5:</li>
+              <li>6:</li>
+              <li>7:</li>
+              <li>8:</li>
+              <li>9:</li>
+              <li>10:</li>
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
+              <li>4:</li>
+              <li>5:</li>
+              <li>6:</li>
+              <li>7:</li>
+              <li>8:</li>
+              <li>9:</li>
+              <li>10:</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </body>
+</html>
