--- a/307.html
+++ b/307.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <meta charset="utf-8">
@@ -27,19 +26,17 @@
   <br>巴山夜雨涨秋池。</br>
 <br>何当共剪西窗烛，</br>
 <br>却话巴山夜雨时。</br>
+
 <p class="br">无题·重帏深下莫愁堂</p>
 <p class="q">李商隐</p>
-<br>重帏深下莫愁堂，卧后清宵细细长。
-神女生涯原是梦，小姑居处本无郎。
-风波不信菱枝弱，月露谁教桂叶香。
-直道相思了无益，未妨惆怅是清狂。</br>
+<br>重帏深下莫愁堂，</br>
 <br>卧后清宵细细长。</br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
+<br>神女生涯原是梦，</br>
+<br>小姑居处本无郎。</br>
+<br>风波不信菱枝弱，</br>
+<br>月露谁教桂叶香。</br>
+<br>直道相思了无益，</br>
+<br>未妨惆怅是清狂。</br>
 </div>
 </div>
 </body>
