--- a/306.html
+++ b/306.html
@@ -58,19 +58,19 @@
         <tr>
           <td>
             <ul>
-              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">1:GitHub主页</a></li>
-              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">2:课程讲解</a></li>
-              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">3:诗词网站</a></li>
-              <li>4:</li>
-              <li>5:</li>
-              <li>6:</li>
-              <li>7:</li>
-              <li>8:</li>
-              <li>9:</li>
-              <li>10:</li>
+              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站一</a></li>
+              <li><a class="hub" href="https://lee-tiny-co7.github.io/xcoe17.io/307.html">诗词网站二</a></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
             </ul>
           </td>
-          <td>
+          <!-- <td>
             <ul>
               <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
               <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
@@ -84,7 +84,7 @@
               <li>10:</li>
             </ul>
           </td>
-        </tr>
+        </tr> -->
       </table>
     </div>
   </body>
