--- a/306.html
+++ b/306.html
@@ -14,6 +14,13 @@
       padding:10px;/*内边距*/
       text-align:center;/*居中*/
     }
+    #CSS {
+      display: inline-block;
+      text-align:center;
+      box-shadow: 0 10px 1px rgba(0,0,0,0.19),6px 6px rgba(0, 0, 0, 0.23);
+    }
+    .text {text-align:center;
+    }
     p {
       text-align:center;
       font-size:20px;
@@ -37,18 +44,12 @@
       border: 1px solid rgba(35, 0, 255, 0.38);
       background-color:rgba(0, 163, 255, 0.38);
     }
-    .text {text-align:center;
-    }
-    #CSS {
-      text-align:center;
-      box-shadow: 0 10px 1px rgba(0,0,0,0.19),6px 6px rgba(0, 0, 0, 0.23);
-      div {
-        margin:auto;
-      }
   </style>
   <body background="github.jpg" style="color:#727173;"><div class="GitHub">
     <ul>
       <p id="CSS"><a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></p>
+      <p id="CSS"><a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站一</a></p>
+      <p id="CSS"><a class="hub" href="https://lee-tiny-co7.github.io/xcoe17.io/307.html">诗词网站二</a></p>
     </ul>
     </div>
   </body>
@@ -71,20 +72,20 @@
             </ul>
           </td>
           <!-- <td>
-            <ul>
-              <li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
-              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
-              <li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
-              <li>4:</li>
-              <li>5:</li>
-              <li>6:</li>
-              <li>7:</li>
-              <li>8:</li>
-              <li>9:</li>
-              <li>10:</li>
-            </ul>
-          </td>
-        </tr> -->
+<ul>
+<li> <a class="hub" href="https://github.com/Lee-tiny-Co7">GitHub主页</a></li>
+<li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xcoe17.io/">课程讲解</a></li>
+<li> <a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">诗词网站</a></li>
+<li>4:</li>
+<li>5:</li>
+<li>6:</li>
+<li>7:</li>
+<li>8:</li>
+<li>9:</li>
+<li>10:</li>
+</ul>
+</td>
+</tr> -->
       </table>
     </div>
   </body>
