--- a/306.html
+++ b/306.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>QUNER作品集</title>
     <link rel="icon" href="5cb8898910499.32px.ico" type="image/x-icon">
     <link rel="shortcut icon" href="5cb8898910499.32px.ico" type="image/x-icon">
@@ -19,7 +20,9 @@
       text-align:center;
       box-shadow: 0 10px 1px rgba(0,0,0,0.19),6px 6px rgba(0, 0, 0, 0.23);
     }
-    .text {text-align:center;
+    .text {
+      margin:30px;
+      text-align:center;
     }
     p {
       text-align:center;
@@ -33,6 +36,7 @@
     a.hub:hover{color:#ff00b8
     }
     li {
+      margin:50px;
       font-size:15px;
       list-style-type:none;
     }
@@ -54,8 +58,8 @@
     </div>
   </body>
   <body>
-    <div class="text">
-      <table align="center" width="300px"  border="2">
+    <div>
+      <table>
         <tr>
           <td>
             <ul>
