--- a/309.html
+++ b/309.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>致敬</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="308.CSS"/>
     </head>
 
     <body>
@@ -46,8 +45,5 @@
         <h3>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.</h3>
       </div>
     </div>
-
-
-
     </body>
 </html>
