--- a/309.html
+++ b/309.html
@@ -14,7 +14,7 @@
         <div id="img-caption">还没想好致敬Who</div>
       </div>
       <div id="tribute-info">
-        <h3>digetx<a id="tribute-link" href="https://2cy.cloud/ target="_blank">dimension Links</a>.</h3>
+        <h3>digetx<a id="tribute-link" href="https://2cy.cloud/"  target="_blank">dimension Links</a>.</h3>
       </div>
     </div>
     </body>
