--- a/309.html
+++ b/309.html
@@ -14,7 +14,7 @@
         <div id="img-caption">还没想好致敬Who</div>
       </div>
       <div id="tribute-info">
-        <h3><a id="tribute-link" href="https://yishuai.github.io/exercise/FCC/8%20%E8%87%B4%E6%95%AC/1.html"  target="_blank">参考致敬网址</a>.</h3>
+        <h3><a id="tribute-link" href="https://yishuai.github.io/exercise/FCC/8%20%E8%87%B4%E6%95%AC/1.html"  target="_blank">参考致敬网址</a></h3>
       </div>
     </div>
     </body>
