--- a/306.html
+++ b/306.html
@@ -42,15 +42,18 @@
     table, th, td, tr {
       font-weight:bold;
       padding:15px;
-      font-size:20px;
+      font-size:15px;
       text-align:center;
       border: 1px solid rgba(35, 0, 255, 0.38);
       background-color:rgba(0, 163, 255, 0.38);
     }
   .ziti{
     color:black;
-    font-size:20px;
 }
+  a {color:#000000
+    }
+  a.hub:hover{color:#FFFFFF
+    }
   </style>
 </head>
   <body background="github.jpg" style="color:#727173;"><div class="GitHub">
@@ -81,12 +84,12 @@
         <th>内容</th>
       </tr>
       <tr>
-        <td>学习内容</td>
-        <td>web网站分类，以及前端与后端的区别，岗位分为：网页构架师、网页美工、代码开发。</td>
+        <td>诗词网站</td>
+        <td><a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">网址一</a><br><a class="hub" href="https://lee-tiny-co7.github.io/xcoe17.io/307.html">网址二</a></br></td>
       </tr>
       <tr>
         <td>课程材料</td>
-        <td> <a href="1.1web前端开发概述.pdf"> PPT课程材料</a></td>
+        <td> <a href="1.1web前端开发概述.pdf">PPT课程材料</a></td>
       </tr>
       <tr>
         <td>我的讲解</td>
