--- a/306.html
+++ b/306.html
@@ -43,7 +43,7 @@
       font-weight:bold;
       padding:15px;
       font-size:15px;
-      text-align:center;
+      /*text-align:center;*/
       border: 1px solid rgba(35, 0, 255, 0.38);
       background-color:rgba(0, 163, 255, 0.38);
     }
@@ -78,7 +78,7 @@
           </td>
         </table> -->
         <!-- 表格 -->
-        <table style="width:100%" class="ziti">
+        <table align="center" style="width:50%" class="ziti">
       <tr>
         <th>名称</th>
         <th>内容</th>
@@ -88,26 +88,26 @@
         <td><a class="hub" href="https://Lee-tiny-Co7.github.io/xiaoyi.io/">网址一</a><br><a class="hub" href="https://lee-tiny-co7.github.io/xcoe17.io/307.html">网址二</a></br></td>
       </tr>
       <tr>
-        <td>课程材料</td>
-        <td> <a href="1.1web前端开发概述.pdf">PPT课程材料</a></td>
+        <td>柠檬馆</td>
+        <td> <a class="hub" href="https://lee-tiny-co7.github.io/que/206.html">柠檬馆</a></td>
       </tr>
       <tr>
-        <td>我的讲解</td>
-        <td>
-          <audio controls>
+        <td>致敬</td>
+        <td><a class="hub" href="https://lee-tiny-co7.github.io/xcoe17.io/309.html">致敬</a>
+          <!-- <audio controls>
             <source src="web.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
-          </audio>
+          </audio> -->
         </td>
       </tr>
       <tr>
-        <td>课程材料</td>
-        <td> <a href="1.1web前端开发概述.pdf">PPT课程材料，可点开参考</a>
+        <td>技术文档</td>
+        <td> <a class="hub" href="https://lee-tiny-co7.github.io/que.com/like.html">实务学堂简介</a>
         </td>
       </tr>
       <tr>
-        <td>单词</td>
-        <td></td>
+        <td>课程讲解</td>
+        <td> <a class="hub" href="https://lee-tiny-co7.github.io/xcoe17.io/">课件</a></td>
       </tr>
 </table>
     </div>
