--- a/309.html
+++ b/309.html
@@ -2,19 +2,31 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>T</title>
+        <title>致敬</title>
         <link rel="stylesheet" href="308.CSS"/>
     </head>
     <body>
     <div id="main">
-      <h1 id="title">My name is LiYanQun</h1>
-      <div>T</div>
+      <h1 id="title">李时珍</h1>
+      <div>本草纲目</div>
       <div id="img-div">
-      <img id="image" src="https://i.loli.net/2018/04/13/5ad095197bd23.png">
-        <div id="img-caption">还没想好致敬Who</div>
+      <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Li_Shizhen.jpg">
+      <p>李时珍（1518年7月3日－1593年），字东璧，晚年自号濒湖山人。蕲州（今湖北省黄冈市蕲春县蕲州镇）人，生于蕲州亦卒于蕲州。李时珍是中国明朝也是中国历史上最著名的医学家、药学家和博物学家之一，其所著的《本草纲目》是本草学集大成的著作，对后世医学和博物学研究影响深远。李时珍与扁鹊、华佗、张仲景并称中国古代四大名医。</p>
+      <p>李时珍生于1518年7月13日（明武宗正德十三年五月二十六日（儒略历1518年7月3日，合新历7月13日），逝于神宗万历二十二年（公元1593年）。
+<br>
+14岁时考取秀才，但之后三次参加乡试失败，无法成为举人，兼之他对医学的浓厚兴趣一直有增无减，向父亲求说并表明决心：“身如逆流船，心比铁石坚。望父全儿志，至死不怕难”。至此弃儒从医专心研究医药。
+</br>
+30岁时成为当地名医，38岁时，武昌的楚王听说后聘他为去任王府“奉祠正”，奉祠正，掌管良医所事务。
+<br>
+1556年，经举荐补太医院之阙，李时珍在京师供职了一年后辞官。[1]
+</br>
+1557年，辞官回家后，他在雨湖北岸构筑新居，题名“红花园”，并在此行医。此后一直研究医药，历经30余年时间，终于著成《本草纲目》，后来又用12年修订三次。
+<br>
+明万历二十一年（1593年），李时珍离世，葬于湖北省蕲春县蕲州镇东南2公里的雨湖之滨。（参看李时珍墓）</br>1596年，也就是李时珍死后第三年，《本草纲目》在南京正式刊行。</p>
+        <div id="img-caption"></div>
       </div>
       <div id="tribute-info">
-        <h3><a id="tribute-link" href="https://yishuai.github.io/exercise/FCC/8%20%E8%87%B4%E6%95%AC/1.html"  target="_blank">参考致敬网址</a></h3>
+        <h3><a id="tribute-link" href="https://zh.wikipedia.org/wiki/%E6%9D%8E%E6%97%B6%E7%8F%8D"  target="_blank">李时珍</a></h3>
       </div>
     </div>
     </body>
