--- a/306.html
+++ b/306.html
@@ -110,6 +110,7 @@
         <td> <a class="hub" href="https://lee-tiny-co7.github.io/xcoe17.io/">课件</a></td>
       </tr>
       <tr>
+        <td>个人作品集</td>
         <td> <a class="hub" href="https://lee-tiny-co7.github.io/110/110.html">个人作品集</a></td>
       </tr>
 </table>
